# frame-compare-legacy

./: .gemini.md  .gitignore  CHANGELOG.md  agents.md  check_dovi.py  commitlint.config.cjs  frame_compare.py  importlinter.ini  pyproject.toml  pyrightconfig.json
.agent/rules/: persona.md  project-guidance.md
.agent/workflows/: audit-error-handling.md  audit-tests.md  code-review.md
docs/: DECISIONS.md
docs/_generated/: config_tables.md
src/: audio_alignment.py  config_loader.py  datatypes.py  screenshot.py  tmdb.py  utils.py
src/frame_compare/: alignment_helpers.py  alignment_runner.py  analyze_target.py  cache.py  cli_entry.py  cli_layout.py  cli_runtime.py  core.py  diagnostics.py  layout_utils.py  net.py  preflight.py  report.py  result_snapshot.py  runner.py  selection.py  slowpics.py  tmdb_workflow.py  vspreview.py
src/frame_compare/alignment/: __init__.py  core.py  formatting.py  models.py  persistence.py
src/frame_compare/analysis/: cache_io.py  metrics.py  selection.py
src/frame_compare/layout/: __init__.py  engine.py  renderer.py  terminal.py
src/frame_compare/orchestration/: coordinator.py  reporting.py  setup.py  state.py
src/frame_compare/orchestration/phases/: __init__.py  alignment.py  analysis.py  base.py  discovery.py  loader.py  publish.py  render.py  result.py  setup.py
src/frame_compare/render/: encoders.py  geometry.py  overlay.py
src/frame_compare/screenshot/: config.py  debug.py  helpers.py  naming.py  orchestrator.py  render.py
src/frame_compare/services/: dovi_tool.py  factory.py  metadata.py  publishers.py  setup.py
src/frame_compare/vs/: color.py  env.py  props.py  source.py  tonemap.py
tests/: conftest.py  test_analysis.py  test_console_safety.py  test_dovi_debug_logging.py  test_engine_security.py  test_frame_compare.py  test_screenshot.py  test_utils.py  test_vs_core.py  test_vspreview.py  test_webhook_security.py
tests/cli/: test_layout.py
tests/helpers/: runner_env.py
tests/net/: test_httpx_helpers.py
tests/render/: test_geometry_helpers.py  test_overlay_text.py
tests/result_snapshot/: test_render.py
tests/runner/: conftest.py  test_alignment_offsets.py  test_audio_alignment_cli.py  test_cli_entry.py  test_dovi_auto_enable.py  test_overlay_diagnostics.py  test_refactor_golden.py  test_runner_reporting.py  test_runner_services.py  test_section_availability.py  test_slowpics_workflow.py
tests/services/: conftest.py  test_alignment.py  test_publishers.py
tools/: clean_render.py  finalize_refactor.py  fix_render_final.py  gen_config_docs.py  refactor_fix.py  run_pytest.mjs
typings/: frame_compare.pyi
workspace/config/: config.toml
