[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "frame-compare"
version = "0.0.14"
description = "Frame comparison CLI and library"
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["video", "vapoursynth", "comparison", "screenshots", "hdr", "report"]
authors = [
    { name = "Tristan Zine", email = "tristan@users.noreply.github.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Typing :: Typed",
]
requires-python = ">=3.13,<3.14"
dependencies = [
    "rich",
    "colorama; sys_platform == 'win32'",
    "requests",
    "requests-toolbelt",
    "httpx",
    "natsort",
    "anitopy",
    "guessit",
    "click>=8.1",
    "numpy",
    "librosa",
    "soundfile",
    "tqdm",
    "vapoursynth>=72",
    "pyright>=1.1.407",
]

[project.optional-dependencies]
vapoursynth = [
    "vapoursynth>=72",
]
audio = []  # backwards compatibility: audio extras are now core
preview = [
    "vspreview>=0.7",
    "PySide6>=6.6",
]

[project.scripts]
frame-compare = "frame_compare:main"

[project.urls]
Homepage = "https://github.com/TJZine/frame-compare"
Repository = "https://github.com/TJZine/frame-compare"
Issues = "https://github.com/TJZine/frame-compare/issues"

[dependency-groups]
dev = [
    "pytest",
    "pytest-mock",
    "requests-mock",
    "ruff",
    "black",
    "build",
    "twine",
    "check-wheel-contents",
]

[tool.setuptools]
package-dir = {"src" = "src", "src.frame_compare" = "src/frame_compare", "data" = "src/data"}
packages = ["src", "src.frame_compare", "data"]
include-package-data = true
py-modules = ["frame_compare"]

[tool.setuptools.package-data]
"data" = ["config.toml.template", "report/*"]

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.pytest.ini_options]
pythonpath = [".", "src"]
addopts = "-p no:vsengine"
markers = [
    "vs_required: Tests requiring VapourSynth runtime (skipped on macOS dev env)",
    "integration: End-to-end CLI tests that exercise the full pipeline (slow)",
    "unit: Fast isolated tests with minimal dependencies",
    "slow: Tests that take a long time to run",
]

[tool.ruff]
line-length = 120
target-version = "py313"
extend-exclude = ["typings", "legacy", "Legacy"]
src = ["src", "."]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["frame_compare", "src"]
